Add nominee directory and service
